--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازی مار</title>
+    <title>بازی مار برای موبایل</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -23,29 +24,73 @@
             margin-top: 20px;
             font-size: 20px;
         }
+        .controls {
+            margin-top: 20px;
+            display: grid;
+            grid-template-areas:
+                ". up ."
+                "left down right";
+            gap: 10px;
+        }
+        .controls button {
+            padding: 20px;
+            font-size: 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        .controls button:active {
+            background-color: #555;
+        }
+        #up {
+            grid-area: up;
+        }
+        #left {
+            grid-area: left;
+        }
+        #down {
+            grid-area: down;
+        }
+        #right {
+            grid-area: right;
+        }
     </style>
 </head>
 <body>
     <div>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <canvas id="gameCanvas" width="300" height="300"></canvas>
         <div class="score">امتیاز: <span id="score">0</span></div>
+        <div class="controls">
+            <button id="up">↑</button>
+            <button id="left">←</button>
+            <button id="down">↓</button>
+            <button id="right">→</button>
+        </div>
     </div>
 
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
-        const box = 20; // اندازه هر خانه در صفحه
+        const box = 15; // اندازه هر خانه در صفحه
         let snake = [{ x: 9 * box, y: 10 * box }]; // موقعیت اولیه مار
         let food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // موقعیت غذا
         let direction;
         let score = 0;
 
-        // کنترل جهت مار با کلیدهای جهت‌دار
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'ArrowUp' && direction !== 'DOWN') direction = 'UP';
-            if (e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
-            if (e.key === 'ArrowLeft' && direction !== 'RIGHT') direction = 'LEFT';
-            if (e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
+        // کنترل جهت مار با دکمه‌ها
+        document.getElementById('up').addEventListener('click', () => {
+            if (direction !== 'DOWN') direction = 'UP';
+        });
+        document.getElementById('down').addEventListener('click', () => {
+            if (direction !== 'UP') direction = 'DOWN';
+        });
+        document.getElementById('left').addEventListener('click', () => {
+            if (direction !== 'RIGHT') direction = 'LEFT';
+        });
+        document.getElementById('right').addEventListener('click', () => {
+            if (direction !== 'LEFT') direction = 'RIGHT';
         });
 
         // تشخیص برخورد مار با خودش یا دیوار
