--- a/index.html
+++ b/index.html
@@ -1,210 +1,197 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازی مار با ذخیره امتیاز</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #000;
-            color: #fff;
-        }
-        canvas {
-            border: 1px solid #fff;
-            background-color: #111;
-        }
-        .score {
-            margin-top: 20px;
-            font-size: 20px;
-        }
-        .controls {
-            margin-top: 20px;
-            display: grid;
-            grid-template-areas:
-                ". up ."
-                "left down right";
-            gap: 10px;
-        }
-        .controls button {
-            padding: 20px;
-            font-size: 20px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-        .controls button:active {
-            background-color: #555;
-        }
-        #up {
-            grid-area: up;
-        }
-        #left {
-            grid-area: left;
-        }
-        #down {
-            grid-area: down;
-        }
-        #right {
-            grid-area: right;
-        }
-        #restart {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #restart:active {
-            background-color: #666;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Simple Snake Game</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      text-align: center;
+      background-color: white;
+      color: black;
+    }
+    #gameArea {
+      margin: auto;
+      position: relative;
+      width: 300px;
+      height: 300px;
+      background: #000;
+      overflow: hidden;
+    }
+    .snake-part {
+      width: 20px;
+      height: 20px;
+      background: lime;
+      position: absolute;
+      animation: snakeAnim 0.3s ease-in-out;
+    }
+    .food {
+      width: 20px;
+      height: 20px;
+      background: red;
+      position: absolute;
+      animation: foodAnim 0.3s ease-in-out;
+    }
+    @keyframes snakeAnim {
+      0% { transform: scale(1.2); }
+      100% { transform: scale(1); }
+    }
+    @keyframes foodAnim {
+      0% { transform: scale(0.5); opacity: 0.5; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+    #controls {
+      margin-top: 10px;
+    }
+    button {
+      padding: 8px 16px;
+      margin: 5px;
+    }
+    .night-mode {
+      background-color: #111;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <div>
-        <canvas id="gameCanvas" width="300" height="300"></canvas>
-        <div class="score">امتیاز فعلی: <span id="score">0</span></div>
-        <div class="score">بالاترین امتیاز: <span id="highScore">0</span></div>
-        <div class="controls">
-            <button id="up">↑</button>
-            <button id="left">←</button>
-            <button id="down">↓</button>
-            <button id="right">→</button>
-        </div>
-        <button id="restart">شروع مجدد</button>
-    </div>
+  <h3>امتیاز: <span id="score">0</span> | رکورد: <span id="highscore">0</span></h3>
+  <div id="gameArea"></div>
 
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        const box = 15; // اندازه هر خانه در صفحه
-        let snake = [{ x: 9 * box, y: 10 * box }]; // موقعیت اولیه مار
-        let food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // موقعیت غذا
-        let direction;
-        let score = 0;
-        let highScore = localStorage.getItem('highScore') || 0; // دریافت بالاترین امتیاز از localStorage
-        let game;
+  <div id="controls">
+    <button onclick="changeDir('up')">بالا</button><br>
+    <button onclick="changeDir('left')">چپ</button>
+    <button onclick="changeDir('down')">پایین</button>
+    <button onclick="changeDir('right')">راست</button><br>
+    <button onclick="resetGame()">شروع دوباره</button>
+    <button onclick="togglePause()"><span id="pauseText">توقف</span></button>
+    <button onclick="toggleMode()">حالت شب / روز</button>
+  </div>
 
-        // نمایش بالاترین امتیاز
-        document.getElementById('highScore').innerText = highScore;
+  <audio id="eatSound" src="https://www.soundjay.com/button/sounds/button-10.mp3"></audio>
+  <audio id="gameOverSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
-        // کنترل جهت مار با دکمه‌ها
-        document.getElementById('up').addEventListener('click', () => {
-            if (direction !== 'DOWN') direction = 'UP';
-        });
-        document.getElementById('down').addEventListener('click', () => {
-            if (direction !== 'UP') direction = 'DOWN';
-        });
-        document.getElementById('left').addEventListener('click', () => {
-            if (direction !== 'RIGHT') direction = 'LEFT';
-        });
-        document.getElementById('right').addEventListener('click', () => {
-            if (direction !== 'LEFT') direction = 'RIGHT';
-        });
+  <script>
+    const area = document.getElementById("gameArea");
+    const scoreText = document.getElementById("score");
+    const highscoreText = document.getElementById("highscore");
+    const eatSound = document.getElementById("eatSound");
+    const gameOverSound = document.getElementById("gameOverSound");
+    let snake = [{x: 0, y: 0}];
+    let direction = 'right';
+    let food = {};
+    let score = 0;
+    let interval = 300;
+    let timer = null;
+    let isPaused = false;
 
-        // کنترل جهت مار با کیبورد
-        document.addEventListener('keydown', (event) => {
-            switch(event.key) {
-                case 'ArrowUp':
-                    if (direction !== 'DOWN') direction = 'UP';
-                    break;
-                case 'ArrowDown':
-                    if (direction !== 'UP') direction = 'DOWN';
-                    break;
-                case 'ArrowLeft':
-                    if (direction !== 'RIGHT') direction = 'LEFT';
-                    break;
-                case 'ArrowRight':
-                    if (direction !== 'LEFT') direction = 'RIGHT';
-                    break;
-            }
-        });
+    const gridSize = 20;
+    const maxSize = 300;
 
-        // شروع مجدد بازی
-        document.getElementById('restart').addEventListener('click', () => {
-            clearInterval(game); // متوقف کردن بازی فعلی
-            snake = [{ x: 9 * box, y: 10 * box }]; // بازنشانی موقعیت مار
-            food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // بازنشانی موقعیت غذا
-            direction = undefined; // بازنشانی جهت
-            score = 0; // بازنشانی امتیاز
-            document.getElementById('score').innerText = score;
-            game = setInterval(drawGame, 100); // شروع بازی جدید
-        });
+    document.onkeydown = function(e) {
+      const keys = {37: 'left', 38: 'up', 39: 'right', 40: 'down'};
+      if (keys[e.keyCode]) changeDir(keys[e.keyCode]);
+    };
 
-        // تشخیص برخورد مار با خودش یا دیوار
-        function collisionDetection(head, array) {
-            for (let i = 0; i < array.length; i++) {
-                if (head.x === array[i].x && head.y === array[i].y) return true;
-            }
-            return false;
+    function changeDir(dir) {
+      direction = dir;
+    }
+
+    function spawnFood() {
+      food = {
+        x: Math.floor(Math.random() * (maxSize / gridSize)) * gridSize,
+        y: Math.floor(Math.random() * (maxSize / gridSize)) * gridSize
+      };
+    }
+
+    function draw() {
+      area.innerHTML = "";
+      snake.forEach(part => {
+        let el = document.createElement("div");
+        el.className = "snake-part";
+        el.style.left = part.x + "px";
+        el.style.top = part.y + "px";
+        area.appendChild(el);
+      });
+      let f = document.createElement("div");
+      f.className = "food";
+      f.style.left = food.x + "px";
+      f.style.top = food.y + "px";
+      area.appendChild(f);
+    }
+
+    function move() {
+      if (isPaused) return;
+
+      let head = {...snake[0]};
+      if (direction === 'right') head.x += gridSize;
+      else if (direction === 'left') head.x -= gridSize;
+      else if (direction === 'up') head.y -= gridSize;
+      else if (direction === 'down') head.y += gridSize;
+
+      // Check walls
+      if (head.x < 0 || head.y < 0 || head.x >= maxSize || head.y >= maxSize || snake.some(p => p.x === head.x && p.y === head.y)) {
+        gameOver();
+        return;
+      }
+
+      snake.unshift(head);
+      if (head.x === food.x && head.y === food.y) {
+        score++;
+        eatSound.play();
+        spawnFood();
+        if (score % 10 === 0 && interval > 50) {
+          clearInterval(timer);
+          interval -= 30;
+          timer = setInterval(move, interval);
         }
+      } else {
+        snake.pop();
+      }
 
-        // رسم صفحه بازی
-        function drawGame() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+      scoreText.innerText = score;
+      draw();
+    }
 
-            // رسم مار
-            for (let i = 0; i < snake.length; i++) {
-                ctx.fillStyle = (i === 0) ? 'lime' : 'green';
-                ctx.fillRect(snake[i].x, snake[i].y, box, box);
-                ctx.strokeStyle = '#000';
-                ctx.strokeRect(snake[i].x, snake[i].y, box, box);
-            }
+    function gameOver() {
+      gameOverSound.play();
+      clearInterval(timer);
+      alert("شما باختید! امتیاز: " + score);
+      let hs = localStorage.getItem("highscore") || 0;
+      if (score > hs) {
+        localStorage.setItem("highscore", score);
+        highscoreText.innerText = score;
+      }
+    }
 
-            // رسم غذا
-            ctx.fillStyle = 'red';
-            ctx.fillRect(food.x, food.y, box, box);
+    function resetGame() {
+      score = 0;
+      interval = 300;
+      snake = [{x: 0, y: 0}];
+      direction = 'right';
+      clearInterval(timer);
+      spawnFood();
+      draw();
+      scoreText.innerText = "0";
+      isPaused = false;
+      document.getElementById("pauseText").innerText = "توقف";
+      timer = setInterval(move, interval);
+    }
 
-            // حرکت مار
-            let snakeX = snake[0].x;
-            let snakeY = snake[0].y;
+    function togglePause() {
+      isPaused = !isPaused;
+      document.getElementById("pauseText").innerText = isPaused ? "ادامه" : "توقف";
+    }
 
-            if (direction === 'UP') snakeY -= box;
-            if (direction === 'DOWN') snakeY += box;
-            if (direction === 'LEFT') snakeX -= box;
-            if (direction === 'RIGHT') snakeX += box;
+    function toggleMode() {
+      document.body.classList.toggle("night-mode");
+    }
 
-            // تشخیص برخورد با غذا
-            if (snakeX === food.x && snakeY === food.y) {
-                score++;
-                document.getElementById('score').innerText = score;
-
-                // بررسی و به‌روزرسانی بالاترین امتیاز
-                if (score > highScore) {
-                    highScore = score;
-                    localStorage.setItem('highScore', highScore); // ذخیره بالاترین امتیاز در localStorage
-                    document.getElementById('highScore').innerText = highScore;
-                }
-
-                food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box };
-            } else {
-                snake.pop();
-            }
-
-            // اضافه کردن سر جدید به مار
-            const newHead = { x: snakeX, y: snakeY };
-            snake.unshift(newHead);
-
-            // تشخیص پایان بازی
-            if (snakeX < 0 || snakeX >= canvas.width || snakeY < 0 || snakeY >= canvas.height || collisionDetection(newHead, snake.slice(1))) {
-                clearInterval(game);
-                alert('بازی تمام شد! امتیاز شما: ' + score);
-            }
-        }
-
-        // شروع بازی
-        game = setInterval(drawGame, 100);
-    </script>
+    // Init
+    if (localStorage.getItem("highscore")) {
+      highscoreText.innerText = localStorage.getItem("highscore");
+    }
+    resetGame();
+  </script>
 </body>
 </html>
