--- a/index.html
+++ b/index.html
@@ -1,110 +1,210 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>بازی مار ساده</title>
-  <style>
-    body {
-      background: black;
-      color: white;
-      text-align: center;
-      font-family: sans-serif;
-    }
-    canvas {
-      background: #111;
-      border: 1px solid #fff;
-      margin-top: 20px;
-    }
-    #scoreArea {
-      margin-top: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>بازی مار با ذخیره امتیاز</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #000;
+            color: #fff;
+        }
+        canvas {
+            border: 1px solid #fff;
+            background-color: #111;
+        }
+        .score {
+            margin-top: 20px;
+            font-size: 20px;
+        }
+        .controls {
+            margin-top: 20px;
+            display: grid;
+            grid-template-areas:
+                ". up ."
+                "left down right";
+            gap: 10px;
+        }
+        .controls button {
+            padding: 20px;
+            font-size: 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        .controls button:active {
+            background-color: #555;
+        }
+        #up {
+            grid-area: up;
+        }
+        #left {
+            grid-area: left;
+        }
+        #down {
+            grid-area: down;
+        }
+        #right {
+            grid-area: right;
+        }
+        #restart {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #restart:active {
+            background-color: #666;
+        }
+    </style>
 </head>
 <body>
-  <h2>بازی مار ساده</h2>
-  <canvas id="game" width="300" height="300"></canvas>
-  <div id="scoreArea">
-    <p>امتیاز: <span id="score">0</span></p>
-    <p>بالاترین امتیاز: <span id="highScore">0</span></p>
-  </div>
+    <div>
+        <canvas id="gameCanvas" width="300" height="300"></canvas>
+        <div class="score">امتیاز فعلی: <span id="score">0</span></div>
+        <div class="score">بالاترین امتیاز: <span id="highScore">0</span></div>
+        <div class="controls">
+            <button id="up">↑</button>
+            <button id="left">←</button>
+            <button id="down">↓</button>
+            <button id="right">→</button>
+        </div>
+        <button id="restart">شروع مجدد</button>
+    </div>
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        const box = 15; // اندازه هر خانه در صفحه
+        let snake = [{ x: 9 * box, y: 10 * box }]; // موقعیت اولیه مار
+        let food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // موقعیت غذا
+        let direction;
+        let score = 0;
+        let highScore = localStorage.getItem('highScore') || 0; // دریافت بالاترین امتیاز از localStorage
+        let game;
 
-    const box = 15;
-    let snake = [{ x: 9 * box, y: 9 * box }];
-    let food = {
-      x: Math.floor(Math.random() * 20) * box,
-      y: Math.floor(Math.random() * 20) * box
-    };
-    let direction;
-    let score = 0;
-    let highScore = localStorage.getItem("highScore") || 0;
-    document.getElementById("highScore").innerText = highScore;
+        // نمایش بالاترین امتیاز
+        document.getElementById('highScore').innerText = highScore;
 
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowUp" && direction !== "DOWN") direction = "UP";
-      if (e.key === "ArrowDown" && direction !== "UP") direction = "DOWN";
-      if (e.key === "ArrowLeft" && direction !== "RIGHT") direction = "LEFT";
-      if (e.key === "ArrowRight" && direction !== "LEFT") direction = "RIGHT";
-    });
+        // کنترل جهت مار با دکمه‌ها
+        document.getElementById('up').addEventListener('click', () => {
+            if (direction !== 'DOWN') direction = 'UP';
+        });
+        document.getElementById('down').addEventListener('click', () => {
+            if (direction !== 'UP') direction = 'DOWN';
+        });
+        document.getElementById('left').addEventListener('click', () => {
+            if (direction !== 'RIGHT') direction = 'LEFT';
+        });
+        document.getElementById('right').addEventListener('click', () => {
+            if (direction !== 'LEFT') direction = 'RIGHT';
+        });
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+        // کنترل جهت مار با کیبورد
+        document.addEventListener('keydown', (event) => {
+            switch(event.key) {
+                case 'ArrowUp':
+                    if (direction !== 'DOWN') direction = 'UP';
+                    break;
+                case 'ArrowDown':
+                    if (direction !== 'UP') direction = 'DOWN';
+                    break;
+                case 'ArrowLeft':
+                    if (direction !== 'RIGHT') direction = 'LEFT';
+                    break;
+                case 'ArrowRight':
+                    if (direction !== 'LEFT') direction = 'RIGHT';
+                    break;
+            }
+        });
 
-      // Draw snake
-      for (let i = 0; i < snake.length; i++) {
-        ctx.fillStyle = i === 0 ? "lime" : "green";
-        ctx.fillRect(snake[i].x, snake[i].y, box, box);
-      }
+        // شروع مجدد بازی
+        document.getElementById('restart').addEventListener('click', () => {
+            clearInterval(game); // متوقف کردن بازی فعلی
+            snake = [{ x: 9 * box, y: 10 * box }]; // بازنشانی موقعیت مار
+            food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // بازنشانی موقعیت غذا
+            direction = undefined; // بازنشانی جهت
+            score = 0; // بازنشانی امتیاز
+            document.getElementById('score').innerText = score;
+            game = setInterval(drawGame, 100); // شروع بازی جدید
+        });
 
-      // Draw food
-      ctx.fillStyle = "red";
-      ctx.fillRect(food.x, food.y, box, box);
-
-      let headX = snake[0].x;
-      let headY = snake[0].y;
-
-      if (direction === "UP") headY -= box;
-      if (direction === "DOWN") headY += box;
-      if (direction === "LEFT") headX -= box;
-      if (direction === "RIGHT") headX += box;
-
-      if (headX === food.x && headY === food.y) {
-        score++;
-        document.getElementById("score").innerText = score;
-
-        if (score > highScore) {
-          highScore = score;
-          localStorage.setItem("highScore", highScore);
-          document.getElementById("highScore").innerText = highScore;
+        // تشخیص برخورد مار با خودش یا دیوار
+        function collisionDetection(head, array) {
+            for (let i = 0; i < array.length; i++) {
+                if (head.x === array[i].x && head.y === array[i].y) return true;
+            }
+            return false;
         }
 
-        food = {
-          x: Math.floor(Math.random() * 20) * box,
-          y: Math.floor(Math.random() * 20) * box
-        };
-      } else {
-        snake.pop();
-      }
+        // رسم صفحه بازی
+        function drawGame() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      const newHead = { x: headX, y: headY };
+            // رسم مار
+            for (let i = 0; i < snake.length; i++) {
+                ctx.fillStyle = (i === 0) ? 'lime' : 'green';
+                ctx.fillRect(snake[i].x, snake[i].y, box, box);
+                ctx.strokeStyle = '#000';
+                ctx.strokeRect(snake[i].x, snake[i].y, box, box);
+            }
 
-      if (
-        headX < 0 || headX >= canvas.width ||
-        headY < 0 || headY >= canvas.height ||
-        snake.some((s) => s.x === newHead.x && s.y === newHead.y)
-      ) {
-        clearInterval(game);
-        alert("بازی تمام شد! امتیاز: " + score);
-        return;
-      }
+            // رسم غذا
+            ctx.fillStyle = 'red';
+            ctx.fillRect(food.x, food.y, box, box);
 
-      snake.unshift(newHead);
-    }
+            // حرکت مار
+            let snakeX = snake[0].x;
+            let snakeY = snake[0].y;
 
-    const game = setInterval(draw, 100);
-  </script>
+            if (direction === 'UP') snakeY -= box;
+            if (direction === 'DOWN') snakeY += box;
+            if (direction === 'LEFT') snakeX -= box;
+            if (direction === 'RIGHT') snakeX += box;
+
+            // تشخیص برخورد با غذا
+            if (snakeX === food.x && snakeY === food.y) {
+                score++;
+                document.getElementById('score').innerText = score;
+
+                // بررسی و به‌روزرسانی بالاترین امتیاز
+                if (score > highScore) {
+                    highScore = score;
+                    localStorage.setItem('highScore', highScore); // ذخیره بالاترین امتیاز در localStorage
+                    document.getElementById('highScore').innerText = highScore;
+                }
+
+                food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box };
+            } else {
+                snake.pop();
+            }
+
+            // اضافه کردن سر جدید به مار
+            const newHead = { x: snakeX, y: snakeY };
+            snake.unshift(newHead);
+
+            // تشخیص پایان بازی
+            if (snakeX < 0 || snakeX >= canvas.width || snakeY < 0 || snakeY >= canvas.height || collisionDetection(newHead, snake.slice(1))) {
+                clearInterval(game);
+                alert('بازی تمام شد! امتیاز شما: ' + score);
+            }
+        }
+
+        // شروع بازی
+        game = setInterval(drawGame, 100);
+    </script>
 </body>
 </html>
