--- a/index.html
+++ b/index.html
@@ -7,84 +7,166 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             background-color: #000;
-            color: white;
+            color: #fff;
         }
         canvas {
             border: 1px solid #fff;
             background-color: #111;
         }
         .score {
+            margin-top: 20px;
             font-size: 20px;
-            margin: 20px;
+        }
+        .controls {
+            margin-top: 20px;
+            display: grid;
+            grid-template-areas:
+                ". up ."
+                "left down right";
+            gap: 10px;
         }
         .controls button {
+            padding: 20px;
             font-size: 20px;
-            padding: 10px;
-            margin: 5px;
-            cursor: pointer;
             background-color: #333;
             color: #fff;
             border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        .controls button:active {
+            background-color: #555;
+        }
+        #up {
+            grid-area: up;
+        }
+        #left {
+            grid-area: left;
+        }
+        #down {
+            grid-area: down;
+        }
+        #right {
+            grid-area: right;
+        }
+        #restart {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #restart:active {
+            background-color: #666;
         }
     </style>
 </head>
 <body>
-    <h1>بازی مار</h1>
-    <canvas id="gameCanvas" width="300" height="300"></canvas>
-    <div class="score">امتیاز: <span id="score">0</span></div>
-    <div class="score">بالاترین امتیاز: <span id="highScore">0</span></div>
     <div>
-        <button id="up">↑</button>
-        <button id="left">←</button>
-        <button id="down">↓</button>
-        <button id="right">→</button>
+        <canvas id="gameCanvas" width="300" height="300"></canvas>
+        <div class="score">امتیاز فعلی: <span id="score">0</span></div>
+        <div class="score">بالاترین امتیاز: <span id="highScore">0</span></div>
+        <div class="controls">
+            <button id="up">↑</button>
+            <button id="left">←</button>
+            <button id="down">↓</button>
+            <button id="right">→</button>
+        </div>
+        <button id="restart">شروع مجدد</button>
     </div>
-    <button id="restart">شروع مجدد</button>
 
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
-        const box = 15;
-        let snake = [{ x: 9 * box, y: 10 * box }];
-        let food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box };
-        let direction = "";
+        const box = 15; // اندازه هر خانه در صفحه
+        let snake = [{ x: 9 * box, y: 10 * box }]; // موقعیت اولیه مار
+        let food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // موقعیت غذا
+        let direction;
         let score = 0;
-        let highScore = localStorage.getItem('highScore') || 0;
+        let highScore = localStorage.getItem('highScore') || 0; // دریافت بالاترین امتیاز از localStorage
+        let game;
 
+        // نمایش بالاترین امتیاز
         document.getElementById('highScore').innerText = highScore;
 
-        // تغییر جهت مار با دکمه‌ها
-        document.getElementById('up').onclick = () => direction = 'UP';
-        document.getElementById('down').onclick = () => direction = 'DOWN';
-        document.getElementById('left').onclick = () => direction = 'LEFT';
-        document.getElementById('right').onclick = () => direction = 'RIGHT';
+        // کنترل جهت مار با دکمه‌ها
+        document.getElementById('up').addEventListener('click', () => {
+            if (direction !== 'DOWN') direction = 'UP';
+        });
+        document.getElementById('down').addEventListener('click', () => {
+            if (direction !== 'UP') direction = 'DOWN';
+        });
+        document.getElementById('left').addEventListener('click', () => {
+            if (direction !== 'RIGHT') direction = 'LEFT';
+        });
+        document.getElementById('right').addEventListener('click', () => {
+            if (direction !== 'LEFT') direction = 'RIGHT';
+        });
+
+        // کنترل جهت مار با کیبورد
+        document.addEventListener('keydown', (event) => {
+            switch(event.key) {
+                case 'ArrowUp':
+                    if (direction !== 'DOWN') direction = 'UP';
+                    break;
+                case 'ArrowDown':
+                    if (direction !== 'UP') direction = 'DOWN';
+                    break;
+                case 'ArrowLeft':
+                    if (direction !== 'RIGHT') direction = 'LEFT';
+                    break;
+                case 'ArrowRight':
+                    if (direction !== 'LEFT') direction = 'RIGHT';
+                    break;
+            }
+        });
 
         // شروع مجدد بازی
-        document.getElementById('restart').onclick = () => {
-            snake = [{ x: 9 * box, y: 10 * box }];
-            food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box };
-            direction = "";
-            score = 0;
+        document.getElementById('restart').addEventListener('click', () => {
+            clearInterval(game); // متوقف کردن بازی فعلی
+            snake = [{ x: 9 * box, y: 10 * box }]; // بازنشانی موقعیت مار
+            food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box }; // بازنشانی موقعیت غذا
+            direction = undefined; // بازنشانی جهت
+            score = 0; // بازنشانی امتیاز
             document.getElementById('score').innerText = score;
-            gameInterval = setInterval(drawGame, 100);
-        };
+            game = setInterval(drawGame, 100); // شروع بازی جدید
+        });
 
-        // حرکت مار
+        // تشخیص برخورد مار با خودش یا دیوار
+        function collisionDetection(head, array) {
+            for (let i = 0; i < array.length; i++) {
+                if (head.x === array[i].x && head.y === array[i].y) return true;
+            }
+            return false;
+        }
+
+        // رسم صفحه بازی
         function drawGame() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             // رسم مار
-            snake.forEach((segment, index) => {
-                ctx.fillStyle = index === 0 ? 'lime' : 'green';
-                ctx.fillRect(segment.x, segment.y, box, box);
-            });
+            for (let i = 0; i < snake.length; i++) {
+                ctx.fillStyle = (i === 0) ? 'lime' : 'green';
+                ctx.fillRect(snake[i].x, snake[i].y, box, box);
+                ctx.strokeStyle = '#000';
+                ctx.strokeRect(snake[i].x, snake[i].y, box, box);
+            }
 
             // رسم غذا
             ctx.fillStyle = 'red';
             ctx.fillRect(food.x, food.y, box, box);
 
+            // حرکت مار
             let snakeX = snake[0].x;
             let snakeY = snake[0].y;
 
@@ -93,39 +175,36 @@
             if (direction === 'LEFT') snakeX -= box;
             if (direction === 'RIGHT') snakeX += box;
 
-            // برخورد با غذا
+            // تشخیص برخورد با غذا
             if (snakeX === food.x && snakeY === food.y) {
                 score++;
+                document.getElementById('score').innerText = score;
+
+                // بررسی و به‌روزرسانی بالاترین امتیاز
                 if (score > highScore) {
                     highScore = score;
-                    localStorage.setItem('highScore', highScore);
+                    localStorage.setItem('highScore', highScore); // ذخیره بالاترین امتیاز در localStorage
+                    document.getElementById('highScore').innerText = highScore;
                 }
-                document.getElementById('score').innerText = score;
+
                 food = { x: Math.floor(Math.random() * 20) * box, y: Math.floor(Math.random() * 20) * box };
             } else {
                 snake.pop();
             }
 
+            // اضافه کردن سر جدید به مار
             const newHead = { x: snakeX, y: snakeY };
             snake.unshift(newHead);
 
-            // برخورد با دیوار یا بدن مار
-            if (snakeX < 0 || snakeX >= canvas.width || snakeY < 0 || snakeY >= canvas.height || collision(snake)) {
-                clearInterval(gameInterval);
+            // تشخیص پایان بازی
+            if (snakeX < 0 || snakeX >= canvas.width || snakeY < 0 || snakeY >= canvas.height || collisionDetection(newHead, snake.slice(1))) {
+                clearInterval(game);
                 alert('بازی تمام شد! امتیاز شما: ' + score);
             }
         }
 
-        // بررسی برخورد با بدن مار
-        function collision(snake) {
-            for (let i = 1; i < snake.length; i++) {
-                if (snake[0].x === snake[i].x && snake[0].y === snake[i].y) return true;
-            }
-            return false;
-        }
-
         // شروع بازی
-        let gameInterval = setInterval(drawGame, 100);
+        game = setInterval(drawGame, 100);
     </script>
 </body>
 </html>
